--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 layout: default
 ---
 
+
 <!-- 사이드바에 카테고리 목록 추가 -->
-<div class="sidebar-categories">
-    {% assign categories = site.categories | sort %}
-    {% for category in categories %}
-    <a href="javascript:void(0);" onclick="filterPostsByCategory('{{ category[0] }}')">{{ category[0] }}</a>
-    {% endfor %}
-</div>
+{% include sidebar.html %}
 
 <!-- 포스트 목록 -->
 <div class="posts">
@@ -27,14 +23,5 @@ layout: default
     {% endfor %}
 </div>
 
-<script>
-    function filterPostsByCategory(category) {
-        document.querySelectorAll('.post').forEach(function(post) {
-            post.style.display = 'none';
-        });
-        document.querySelectorAll('.post[data-category*="' + category + '"]').forEach(function(post) {
-            post.style.display = 'block';
-        });
-    }
-</script>
+
   
